--- a/templates/app_layout.html
+++ b/templates/app_layout.html
@@ -35,7 +35,7 @@
                 </span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="{% static 'images/logo.png' %}" width="100px" class="" alt="smart">
+                <img src="{% static 'images/logo.png' %}" width="60px" class="" alt="smart">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
     {% endblock %}
     <!-- END HEADER -->
 
-    <div class="d-flex">
+    <div class="d-lg-flex">
 
         <!-- SIDEBAR -->
         {% include "sidebar.html" %}
