feat: class Meta on models, view and urls financials app
- add class Meta on financials app models

- financials app Movements ListView

- add urls of financials app

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -67,7 +67,7 @@
                                 </a>
                             </li>
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="">
+                                <a class="text-decoration-none text-secondary" href="{% url 'financial_movements' %}">
                                     Movimentações
                                 </a>
                             </li>
