--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,13 +6,21 @@ GENERAL STYLE
     font-family: "Nunito Sans", sans-serif;
 }
 
+.card-smart {
+    background-color: #FFFF;
+    border-radius: 1rem;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    padding: 1rem;
+    margin: 15px;
+}
+
 /* ------------------
 BUTTONS STYLE 
 -------------------*/
 
-.btn-smart{
+.btn-smart {
     background-color: #6702B4 !important;
-    padding: 10px !important;
+    padding: 8px 10px !important;
     color: #FFFF !important;
     font-weight: 700;
     border-radius: 0.2em !important;
@@ -21,7 +29,7 @@ BUTTONS STYLE
     width: 100%;
 }
 
-.btn-smart:hover{
+.btn-smart:hover {
     background-color: #6702B4 !important;
 }
 
@@ -31,9 +39,12 @@ FORMS STYLE
 -------------------*/
 
 label {
-    color: #000; /* Cor do texto */
-    font-size: 1.2rem; /* Tamanho da fonte */
-    font-weight: 500; /* Peso da fonte */
+    color: #000;
+    /* Cor do texto */
+    font-size: 1.2rem;
+    /* Tamanho da fonte */
+    font-weight: 500;
+    /* Peso da fonte */
     display: block;
 }
 
@@ -41,23 +52,23 @@ input {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
-    border: 1px solid #c0c0c0; 
+    border: 1px solid #c0c0c0;
     border-radius: 0.2em;
-    background-color: #FFFF; 
+    background-color: #FFFF;
     display: block;
 }
 
 input:focus {
     border-color: #EDEDED;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); 
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 /* ------------------
 RESPONSIVE
 -------------------*/
 
-@media screen  and (max-width: 450px) {
-    .display-none-small-screen{
+@media screen and (max-width: 450px) {
+    .display-none-small-screen {
         display: none;
     }
 }
