--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -57,17 +57,12 @@
                         <ul class="fw-medium border-start border-secondary mx-2 ps-2"
                             style="border-left-width: 4px !important;">
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="">
-                                    Contas a receber
+                                <a class="text-decoration-none text-secondary" href="{% url 'financial_transaction_list' %}">
+                                    Contas a pagar e receber
                                 </a>
                             </li>
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="">
-                                    Contas a pagar
-                                </a>
-                            </li>
-                            <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="{% url 'financial_movements' %}">
+                                <a class="text-decoration-none text-secondary" href="{% url 'financial_movements_list' %}">
                                     Movimentações
                                 </a>
                             </li>
