fix: list installments

--- a/financials/templates/financial_transaction/form.html
+++ b/financials/templates/financial_transaction/form.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<div class="m-3">
+    <h2 class="m-0 fw-bolder fs-3">
+        Cadastro de conta
+    </h2>
+    <p class="m-0 text-secondary">
+        Preencha os campos abaixo
+    </p>
+</div>
 
 <div class="card-smart">
 
@@ -9,7 +17,9 @@
         <form action="" method="post">
             {% csrf_token %}
             {{ form }}
-            <input type="submit" value="Salvar" class="btn-smart mt-3">
+            <div class="d-flex justify-content-end">
+                <input type="submit" value="Salvar" class="btn-smart my-3 w-50">
+            </div>
         </form>
     </div>
     
