--- a/financials/templates/financial_transaction/list.html
+++ b/financials/templates/financial_transaction/list.html
@@ -13,7 +13,8 @@
         </p>
     </div>
     <div class="d-flex align-items-center">
-        <a href="{% url 'financial_transaction_create' %}" class="btn-smart mx-3 icon-link d-flex justify-content-center">
+        <a href="{% url 'financial_transaction_create' %}"
+            class="btn-smart mx-3 icon-link d-flex justify-content-center">
             <span class="material-symbols-outlined fill-icon">
                 add_circle
             </span>
@@ -73,180 +74,15 @@
 
 <div class="card-smart">
 
-    <!-- FORM -->
-    <form action="" method="get" autocomplete="off">
-
-
-        <!-- CARD FORM -->
-        <div class="border rounded">
-
-            <!-- CARD FORM HEADER -->
-            <div class="p-3 border-bottom">
-                <p class="m-0 fs-5 fw-bold">
-                    Filtros para listagem
-                </p>
+    <div class="card p-3">
+        <form method="GET" class="row">
+            {{ filter.form.as_p }}
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn-smart w-50">Filtrar</button>
             </div>
-            <!-- FIM CARD FORM HEADER -->
+        </form>
+    </div>
 
-            <!-- CARD FORM BODY -->
-            <div class="bg-white p-3">
-
-                <!-- ROW -->
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label for="inputCategoria" class="form-label">
-                            Categoria
-                        </label>
-                        <select id="inputCategoria" name="categoria_financeiro_id" class="form-select form-control">
-                            <option value="1" select>
-                                -- Selecione --
-                            </option>
-                            <option value="0">
-                                Não dísponivel
-                            </option>
-                        </select>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <label for="inputClienteFornecedor" class="form-label">
-                            Cliente / Fornecedor
-                        </label>
-                        <select id="inputClienteFornecedor" name="cliente_fornecedor_id"
-                            class="form-select form-control">
-                            <option value="1" select>
-                                -- Selecione --
-                            </option>
-                            <option value="0">
-                                Não dísponivel
-                            </option>
-                        </select>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <label for="inputContaBancaria" class="form-label">
-                            Conta bancária
-                        </label>
-                        <select id="inputContaBancaria" name="conta_bancaria_id" class="form-select form-control">
-                            <option value="1" select>
-                                -- Selecione --
-                            </option>
-                            <option value="0">
-                                Não dísponivel
-                            </option>
-                        </select>
-                    </div>
-
-                </div>
-                <!-- FIM ROW -->
-
-                <!-- ROW -->
-                <div class="row my-3">
-                    <div class="col-sm-2">
-                        <label for="inputIdinstallment" class="form-label">
-                            ID installment
-                        </label>
-                        <input type="text" name="installment_id" class="form-control" id="inputIdinstallment"
-                            placeholder="Ex.: 1584" value="">
-                    </div>
-                    <div class="col-sm-2">
-                        <label for="inputDataVencimentoDe" class="form-label">
-                            Data início
-                        </label>
-                        <input type="date" name="periodoDe" value="" class="form-control" id="inputDataVencimentoDe">
-                    </div>
-                    <div class="col-sm-2">
-                        <label for="inputDataVencimentoAte" class="form-label">
-                            Data fim
-                        </label>
-                        <input type="date" name="periodoAte" value="" class="form-control" id="inputDataVencimentoAte">
-                    </div>
-                    <div class="col-sm-6">
-                        <label for="inputsChecksTipoPeriodo" class="form-label">
-                            Tipo período
-                        </label>
-                        <div class="inputsChecksTipoPeriodo">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="tipoPeriodo" id="periodoLancamento"
-                                    value="0">
-                                <label class="form-check-label" for="periodoLancamento">
-                                    Lançamento
-                                </label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="tipoPeriodo" id="periodoVencimento"
-                                    value="1">
-                                <label class="form-check-label" for="periodoVencimento">
-                                    Vencimento
-                                </label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="tipoPeriodo" id="periodoPagamento"
-                                    value="2">
-                                <label class="form-check-label" for="periodoPagamento">
-                                    Pagamento
-                                </label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="tipoPeriodo" id="periodoBaixa"
-                                    value="3">
-                                <label class="form-check-label" for="periodoBaixa">
-                                    Baixa
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- ROW -->
-                    <div class="row mt-3">
-                        <div class="col-sm-6">
-                            <label for="inputsChecksTipoPeriodo" class="form-label">
-                                Situação
-                            </label>
-                            <div class="inputsChecksTipoPeriodo">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="situacao" id="periodoLancamento"
-                                        value="3" checked>
-                                    <label class="form-check-label" for="periodoLancamento">
-                                        Todos
-                                    </label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="situacao" id="periodoVencimento"
-                                        value="0">
-                                    <label class="form-check-label" for="periodoVencimento">
-                                        A vencer
-                                    </label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="situacao" id="periodoRecebimento"
-                                        value="1">
-                                    <label class="form-check-label" for="periodoRecebimento">
-                                        Pagos
-                                    </label>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- FIM ROW -->
-
-                </div>
-                <!-- FIM ROW -->
-
-                <div class="d-flex">
-                    <button type="submit" class="btn bg-padrao text-white px-4 fw-semibold">
-                        Consultar
-                    </button>
-                </div>
-
-            </div>
-            <!-- FIM CARD FORM BODY -->
-
-        </div>
-        <!-- FIM CARD FORM -->
-
-    </form>
-    <!-- FIM FORM -->
 
     <!-- TABLE installmentS  -->
     <table class="table table-hover table-bordered text-center my-3">
@@ -277,7 +113,8 @@
                 </td>
                 <td>{{installment.id}}</td>
                 <td>{{installment.financial_transaction.customer_supplier.name}}</td>
-                <td>{{installment.installment_number}} / {{installment.financial_transaction.number_of_installments}}</td>
+                <td>{{installment.installment_number}} / {{installment.financial_transaction.number_of_installments}}
+                </td>
                 <td>{{installment.financial_transaction.financial_category.name}}</td>
                 <td>{{installment.financial_transaction.description}}</td>
                 <td>{{installment.due_date}}</td>
