--- a/financials/templates/financial_transaction/list.html
+++ b/financials/templates/financial_transaction/list.html
@@ -92,12 +92,13 @@
 
     <!-- TABLE -->
     <div class="table-responsive">
-        <table class="table table-hover table-bordered text-center my-3">
+        <table class="table table-hover table-bordered text-center my-3 align-middle">
             <thead>
                 <tr>
                     <th scope="col">
                         <input type="checkbox" id="select_all" name="select_all" />
                     </th>
+                    <th scope="col">Tipo</th>
                     <th scope="col">ID</th>
                     <th scope="col">Cliente/Fornecedor</th>
                     <th scope="col">Nº parcela</th>
@@ -117,6 +118,23 @@
                             aria-expanded="false" aria-controls="collapseinstallment{{installment.id}}" type="checkbox"
                             id="" name="checkboxes[]" value="{{ installment.id }}" />
                     </td>
+                    <td>
+                        {% if installment.financial_transaction.type == 0 %}
+                        <p class="m-0 icon-link bg-danger-subtle p-2 rounded-4">
+                            <span class="material-symbols-outlined me-1 text-danger">
+                                call_received
+                            </span>
+                            A pagar
+                        </p>
+                        {% else %}
+                        <p class="m-0 icon-link bg-success-subtle p-2 rounded-4">
+                            <span class="material-symbols-outlined me-1 text-success">
+                                call_made
+                            </span>
+                            A receber
+                        </p>
+                        {% endif %}
+                    </td>
                     <td>{{installment.id}}</td>
                     <td>{{installment.financial_transaction.customer_supplier.name}}</td>
                     <td>{{installment.installment_number}} /
@@ -130,13 +148,27 @@
                 </tr>
                 <td colspan="11" class="collapse" id="collapseinstallment{{installment.id}}">
                     <div class="p-3 text-start bg-light">
+                        <p class="m-0 fw-bold fs-5">
+                            Lançamento
+                        </p>
                         <p class="m-0">
                             Lançado por {{installment.created_by_user.first_name}}
                         </p>
                         <p class="m-0">
                             Lançado em {{installment.financial_transaction.created_at}}
                         </p>
-
+                        <p class="m-0 fw-bold mt-3 fs-5">
+                            Pagamento
+                        </p>
+                        <p class="m-0">
+                            Baixado por {{installment.marked_down_by_user.first_name}}
+                        </p>
+                        <p class="m-0">
+                            Pago em {{installment.payment_date|date:"d/m/Y"}}
+                        </p>
+                        <p class="m-0">
+                            Valor Pago {{installment.paid_amount|default:''}}
+                        </p>
                     </div>
                 </td>
                 {%endfor%}
