--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,10 @@ GENERAL STYLE
     background-color: #6702B4 !important;
 }
 
+.fs-7{
+    font-size: 13px;
+}
+
 /* ------------------
 BUTTONS STYLE 
 -------------------*/
