refactor: show errors settlment installment

--- a/financials/templates/financial_transaction/list.html
+++ b/financials/templates/financial_transaction/list.html
@@ -162,7 +162,7 @@
                             Lançado em {{installment.financial_transaction.created_at}}
                         </p>
                         <p class="m-0 fw-bold mt-3">
-                            Pagamento
+                            Baixa e Pagamento
                         </p>
                         <p class="m-0">
                             Baixado por {{installment.marked_down_by_user.first_name}}
